refactor services APIs